# director-class-ai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pre-commit.yml  scorecard.yml
benchmarks/: __init__.py  action_evidence.py  action_plane.py  adversarial_red_team.py  audit_chain_hot_path.py  external_action_surfaces.py  mixed_robustness.py  partitions.py  red_team_replay.py
benchmarks/corpus/: __init__.py  catalogue.py  catalogue_adversarial.py  catalogue_case.py  catalogue_mcp.py  generate.py
benchmarks/data/: action_corpus.jsonl  action_corpus_seed.jsonl
benchmarks/external_sources/: MANIFEST.md  SOURCE_LEDGER.json
benchmarks/results/: action_plane_evidence.json  action_plane_evidence.md  action_plane_results.json  adversarial_red_team_results.json  audit_chain_hot_path.json
configs/: ci.toml  high_risk.toml  local_dev.toml  pilot.toml
demos/: action_checkpoint.py
director_class_ai/: __init__.py  positioning.py
director_class_ai/action/: __init__.py  _lexicon.py  _normalize.py  _shell_segments.py  blast_radius.py  browser.py  causal_takeover.py  destructive_command.py  intent_consistency.py  mcp_inspector.py  mcp_registry.py  memory.py  origin_taint.py  remanentia.py  reversibility.py
director_class_ai/approvals/: __init__.py  policy.py  queue.py  transport.py
director_class_ai/audit/: __init__.py  chain.py  export_cli.py  sinks.py
director_class_ai/cli/: __init__.py  approve.py  guard.py  guard_events.py  policy.py
director_class_ai/core/: __init__.py  calibration.py  durability.py  ensemble.py  fusion.py  governor.py  meta_classifier.py  signal.py
director_class_ai/detectors/: __init__.py  citation.py  contradiction.py  defaults.py  injection.py  llm_judge.py  pii.py  response_nli.py  semantic_action_support.py  token_span.py
director_class_ai/effectors/: __init__.py  mcp.py  shell.py  subprocess_guard.py  types.py
director_class_ai/evidence/: __init__.py  package.py  techniques.py
director_class_ai/federation/: __init__.py  manifest.py
director_class_ai/gateway/: __init__.py  mcp.py  mcp_cli.py  mcp_discovery_rules.py  mcp_service.py  policy_binding.py
director_class_ai/policy/: __init__.py  capability.py  capability_profiles.py  corpus.py  drift.py  exposure.py  governance.py  history.py  loader.py  profile.py  review.py  revision.py  runtime_posture.py  store.py
director_class_ai/sdk/: __init__.py  middleware.py
director_class_ai/sidecar/: __init__.py  cli.py  service.py  state.py
director_class_ai/workflows/: __init__.py  authorised_execution.py
docs/: CLAIM_BOUNDARIES.md  demos.md  evidence.md  index.md  onboarding.md
docs/_generated/: studio_manifest.json
notebooks/: action_checkpoint.ipynb
requirements/: ci-pre-commit.in  ci-pre-commit.txt  ci-sbom.in  ci-sbom.txt  dev.txt
src/: lib.rs
tests/: __init__.py  _payloads.py  test_action_benchmark_contract.py  test_action_detectors.py  test_action_evidence.py  test_adversarial_red_team.py  test_approval_queue.py  test_approval_transport.py  test_audit_chain.py  test_audit_chain_hot_path_benchmark.py  test_audit_export_cli.py  test_audit_sinks.py  test_authorised_execution_workflow.py  test_benchmark_partitions.py  test_browser_action.py  test_calibration.py  test_capability_policy.py  test_causal_takeover.py  test_citation_adapter.py  test_claim_boundaries.py  test_cli_approve.py  test_cli_guard.py  test_cli_policy.py  test_content_adapters.py  test_corpus_generator.py  test_default_detectors.py  test_destructive_command.py  test_director_ai_contract.py  test_documentation_surface.py  test_durability.py  test_effectors.py  test_emit_studio_manifest.py  test_ensemble.py  test_evidence_package.py  test_evidence_techniques.py  test_external_action_import_cli.py  test_external_action_surfaces.py  test_federation_manifest.py  test_godfile_guard.py  test_governor.py  (+42 more)
tools/: check_claim_boundaries.py  check_docstrings.py  check_documentation_surface.py  check_godfiles.py  check_numeric_claim_evidence.py  check_phase4_task_intake.py  check_repository_readiness.py  check_spdx.py  check_test_boundary_evidence.py  check_test_quality.py  emit_studio_manifest.py  import_external_action_surface.py
validation/: numeric_claim_evidence.json  phase4_task_intake.json  repository_readiness.json  test_boundary_evidence.json
