[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "director-class-ai"
version = "0.1.0"
description = "High-assurance multi-detector governance for autonomous and mission-critical systems"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [{ name = "Miroslav Šotek", email = "protoscience@anulum.li" }]
keywords = [
    "ai-safety",
    "guardrails",
    "agent-governance",
    "kill-switch",
    "hallucination-detection",
]
# Proprietary commercial product. "Private :: Do Not Upload" makes PyPI reject an
# accidental publish; the licence terms live in LICENSE (declared via license-files).
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
# Content/integrity detectors reuse the director-ai model primitives during
# development; pinned as an explicit dependency on extraction.
detectors = ["director-ai>=3.15"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit>=1.7",
    "hypothesis>=6",
]

[tool.setuptools.packages.find]
include = ["director_class_ai*"]

[tool.setuptools.package-data]
director_class_ai = ["py.typed"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.pytest.ini_options]
addopts = "--cov=director_class_ai --cov-report=term-missing --cov-fail-under=97 --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["director_class_ai"]

[tool.coverage.report]
fail_under = 97
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\.", "raise NotImplementedError"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["director_class_ai"]

# director-ai is the optional [detectors] extra; its model stack is only imported
# inside the adapters' from_pretrained factories, so do not require its stubs.
[[tool.mypy.overrides]]
module = ["director_ai.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
